port pgadmin to y structure. can run nginx and pgadmin seperately.

--- a/Docker/Y-Images/Y-Nginx /StaticWebPageExample/index.html
+++ b/Docker/Y-Images/Y-Nginx /StaticWebPageExample/index.html
@@ -5,7 +5,7 @@
 <h1>Hello World</h1>
 <p>Well, hello there ;)</p>
 <p>StaticWebPageExample</p>
-<p>Test: 3</p>
+<p>Test: y-pgadmin-01</p>
 
 </body>
 </html> 
